--- a/bin/DoAnWeb.dll.config
+++ b/bin/DoAnWeb.dll.config
@@ -15,8 +15,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" />
+	  <authorization>
+		  <allow users="*" />
+	  </authorization>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -61,15 +64,10 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="NHOMWEBEntities" connectionString="metadata=res://*/Models.QLCHModel.csdl|res://*/Models.QLCHModel.ssdl|res://*/Models.QLCHModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GAMINGBBC;initial catalog=NHOMWEB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="NHOMWEBEntities1" connectionString="metadata=res://*/Models.QLCHModel.csdl|res://*/Models.QLCHModel.ssdl|res://*/Models.QLCHModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GAMINGBBC;initial catalog=NHOMWEB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NHOMWEBEntities" connectionString="metadata=res://*/Models.QLCHModel.csdl|res://*/Models.QLCHModel.ssdl|res://*/Models.QLCHModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K9JEDHD;initial catalog=NHOMWEB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
